// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assetHubKusama & peopleKusama > assetHubKusama transfer KSM to peopleKusama > balance on from chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 10000000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`assetHubKusama & peopleKusama > assetHubKusama transfer KSM to peopleKusama > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 0,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`assetHubKusama & peopleKusama > assetHubKusama transfer KSM to peopleKusama > to chain dmp events 1`] = `[]`;

exports[`assetHubKusama & peopleKusama > assetHubKusama transfer KSM to peopleKusama > tx events 1`] = `[]`;

exports[`assetHubKusama & peopleKusama > peopleKusama transfer KSM to assetHubKusama > balance on from chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 10000000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`assetHubKusama & peopleKusama > peopleKusama transfer KSM to assetHubKusama > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": 0,
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 0,
  "sufficients": 0,
}
`;

exports[`assetHubKusama & peopleKusama > peopleKusama transfer KSM to assetHubKusama > from chain ump messages 1`] = `[]`;

exports[`assetHubKusama & peopleKusama > peopleKusama transfer KSM to assetHubKusama > to chain ump events 1`] = `[]`;

exports[`assetHubKusama & peopleKusama > peopleKusama transfer KSM to assetHubKusama > tx events 1`] = `[]`;
